fix: styles, reset global styles to avoid overflow

--- a/expenses-chart-component-main/src/styles/App.css
+++ b/expenses-chart-component-main/src/styles/App.css
@@ -1,7 +1,6 @@
 #root {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  max-width: 1440px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -10,6 +9,7 @@
 }
 
 .main_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
